#3 - 의존성 추가, 설정
- build.gradle: JPA, MySql, H2 추가
- application.yml: db 연결 설정
- .gitignore: 일단은 application.yml 전체 추가

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# yml file
+application.yml
+
 # Created by https://www.toptal.com/developers/gitignore/api/java,windows,macos,intellij+all,visualstudiocode,gradle
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,windows,macos,intellij+all,visualstudiocode,gradle
 
