#47 - 정적 코드 경로 변경
templates/ -> /templates/

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,7 +40,7 @@ spring:
   thymeleaf:
     enabled: true
     cache: false
-    prefix: classpath:templates/
+    prefix: classpath:/templates/
     suffix: .html
     check-templates-location: true
   mvc:
