--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,13 +18,18 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/Checkout@v2
-        run: touch ./src/main/resources/application.yml
         
       - name: Set up JDK 17
         uses: actions/setup-java@v1
         with:
           java-version: 17
           distribution: corretto
+
+      - name: make application.yml
+        run: |
+          cd ./src/main/resources
+          touch ./application.yml
+        shell: bash
 
       - name: Set yml file
         uses: microsoft/variable-substitution@v1
