--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,29 +25,10 @@ jobs:
           java-version: 17
           distribution: corretto
 
-      - name: make application.yml
-        run: |
-          cd ./src/main/resources
-          touch ./application.yml
-        shell: bash
-
-      - name: Set yml file
-        uses: microsoft/variable-substitution@v1
-        with:
-          files: ${{ env.RESOURCE_PATH }}
-        env:
-          spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
-          spring.datasource.url: ${{ secrets.RDS_HOST }}
-          spring.datasource.username: ${{ secrets.RDS_USERNAME }}
-          spring.datasource.password: ${{ secrets.RDS_USERNAME }}
-          spring.jpa.database: mysql
-          spring.jpa.database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
-          spring.jpa.defer-datasource-initialization: true
-          spring.jpa.hibernate.ddl-auto: update
-          spring.jpa.properties.hibernate.default_batch_fetch_size: 100
-          spring.jpa.init.mode: always
-          spring.mail.username: ${{ secrets.MAIL_USERNAME }}
-          spring.mail.password: ${{ secrets.MAIL_PASSWORD }}
+      - uses: actions/checkout@v3
+      - run: touch ./src/main/resources/application.yml
+      - run: echo "${{ secrets.PROPERTIES }}" > ./src/main/resources/application.yml
+      - run: cat ./src/main/resources/application.yml
 
       - name: Grant excute permission for gradlew
         run: chmod +x ./gradlew
